; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv_aux.c_sort_cmp.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv_aux.c_sort_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sort_entry = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @sort_cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sort_cmp(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sort_entry*, align 8
  %6 = alloca %struct.sort_entry*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = bitcast i8* %8 to %struct.sort_entry*
  store %struct.sort_entry* %9, %struct.sort_entry** %5, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.sort_entry*
  store %struct.sort_entry* %11, %struct.sort_entry** %6, align 8
  %12 = load %struct.sort_entry*, %struct.sort_entry** %5, align 8
  %13 = getelementptr inbounds %struct.sort_entry, %struct.sort_entry* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @jv_copy(i32 %14)
  %16 = load %struct.sort_entry*, %struct.sort_entry** %6, align 8
  %17 = getelementptr inbounds %struct.sort_entry, %struct.sort_entry* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @jv_copy(i32 %18)
  %20 = call i32 @jv_cmp(i32 %15, i32 %19)
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %2
  %24 = load i32, i32* %7, align 4
  br label %33

25:                                               ; preds = %2
  %26 = load %struct.sort_entry*, %struct.sort_entry** %5, align 8
  %27 = getelementptr inbounds %struct.sort_entry, %struct.sort_entry* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.sort_entry*, %struct.sort_entry** %6, align 8
  %30 = getelementptr inbounds %struct.sort_entry, %struct.sort_entry* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = sub nsw i32 %28, %31
  br label %33

33:                                               ; preds = %25, %23
  %34 = phi i32 [ %24, %23 ], [ %32, %25 ]
  ret i32 %34
}

declare dso_local i32 @jv_cmp(i32, i32) #1

declare dso_local i32 @jv_copy(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
